--- a/fundooApp/templates/urlimage.html
+++ b/fundooApp/templates/urlimage.html
@@ -11,7 +11,7 @@
 						<img ng-src="{{urlData.imageUrl}}" style="height:50px;width:80px;margin-bottom: 15px;">
 					</div>
           <div></div>
-						<div ng-bind="urlData.title"
+						<div  class="md-truncate" ng-bind="urlData.title"
 							style="font-size: 14px; color:black;padding-left: 88px;margin-top:-63px;"></div>
 						<div ng-bind="urlData.domain"
 							style="font-size: 15px;color:grey;padding-left: 90px;margin-top:15px; "></div>
