--- a/fundooApp/templates/urlimage.html
+++ b/fundooApp/templates/urlimage.html
@@ -6,7 +6,7 @@
 
 				<div class="row"
 					style="margin-right: 0px; margin-left: 0px; border: 1px solid grey">
-          <div><img src"images/link.svg" style="height:15px;width:15px;margin-left:233px;"/><md-tooltip>Go to link</md-tooltip></div>
+          <div><img src"images/gotoLink.svg" style="height:15px;width:15px;margin-left:233px;"/><md-tooltip>Go to link</md-tooltip></div>
 					<div class="col-sm-4 col-md-4 col-xs-4" style="padding: 0px">
 						<img ng-src="{{urlData.imageUrl}}" style="height:50px;width:80px;margin-bottom: 15px;">
 					</div>
